# csv-app

./: Cargo.toml  README.md  apollo-contacts-merged.csv  build-wasm.sh  create-icon.sh  index.html  sample.csv
.github/workflows/: deploy.yml
GridView.app/Contents/: Info.plist
GridView.app/Contents/Resources/: AppIcon.icns
src/: main.rs
