[package]
name = "csv-app"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.33", default-features = false, features = [
    "default_fonts",
    "glow",
] }
egui = "0.33"
egui_extras = "0.33"
csv = "1.4"
image = { version = "0.25", default-features = false, features = ["png"] }

# Native dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
arboard = "3.6"
rfd = "0.15"

# WASM dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
log = "0.4"
js-sys = "0.3"
rfd = { version = "0.15", features = ["file-handle-inner"] }
web-sys = { version = "0.3", features = [
    "Clipboard",
    "Navigator",
    "Window",
    "Document",
    "HtmlCanvasElement",
    "Blob",
    "Url",
    "HtmlAnchorElement",
] }
